# Smart_file-_Optimizer

./: CMakeLists.txt  README.md  SmartFileOptimizer.pro
qml/: Dashboard.qml  DuplicatesPage.qml  Main.qml  OrganizePage.qml  ScanPage.qml  SettingsPage.qml
qml/components/: AnimatedButton.qml  Divider.qml  DonutChart.qml  FileCard.qml  HeaderBar.qml  LogPanel.qml  NavItem.qml  ProgressBar.qml  SectionCard.qml  Sidebar.qml  StatCard.qml  ToggleRow.qml  qmldir
resources/: resources.qrc
src/: bridge.cpp  bridge.h  duplicatedetector.cpp  duplicatedetector.h  fileorganizer.cpp  fileorganizer.h  filescanner.cpp  filescanner.h  logger.cpp  logger.h  main.cpp  settingsmanager.cpp  settingsmanager.h
